Рефакторинг `FixtureServiceImplTest`
- Рефакторинг `FixtureServiceImplTest`.
- Добавлены проверки для тестов `FixtureAssert`.
- Мелкий рефакторинг.