@@ -9,6 +9,7 @@ import javax.annotation.Nullable;
 import javax.persistence.*;
 import java.io.Serializable;
 import java.lang.reflect.Field;
+import java.lang.reflect.InvocationTargetException;
 import java.time.LocalDateTime;
 import java.util.ArrayList;
 import java.util.List;
@@ -19,12 +20,12 @@ import java.util.Objects;
  */
 @Slf4j
 @Data
-@Builder
+@Builder(toBuilder = true)
 @Entity
 @NoArgsConstructor
 @AllArgsConstructor
 @Table(name = "fixtures")
-public class Fixture implements Serializable, Comparable {
+public class Fixture implements Serializable, Comparable<Fixture> {
     @Id
     @Column(name = "fixture_id",nullable = false, insertable = false, updatable = false)
     private Integer id;
@@ -74,17 +75,17 @@ public class Fixture implements Serializable, Comparable {
     @JsonIgnore
     private List<Event> events = new ArrayList<>();
 
-    public String getProperty(String propName) throws NoSuchFieldException, IllegalAccessException, InstantiationException {
+    public String getProperty(String propName) throws NoSuchFieldException, IllegalAccessException, InstantiationException, NoSuchMethodException, InvocationTargetException {
         Field declaredField = this.getClass().getDeclaredField(propName);
         Class<?> targetType = declaredField.getType();
-        Object objectValue = targetType.newInstance();
+        Object objectValue = targetType.getDeclaredConstructor().newInstance();
         Object value = declaredField.get(objectValue);
         return String.valueOf(value);
     }
 
     @Override
-    public int compareTo(Object o) {
-        return eventTimestamp.compareTo(((Fixture) o).eventTimestamp);
+    public int compareTo(Fixture o) {
+        return eventTimestamp.compareTo(o.eventTimestamp);
     }
 
     /**
